--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,12 +1,25 @@
 allow_embedding: false
+db_schema:
+  users:
+    client: none
+    columns: []
+    server: full
+    title: Users
 dependencies: []
-name: M3 App 2
-package_name: M3_App_2
+metadata: {logo_img: 'asset:9b289a8980debf9a7951a2b94cc42673.jpg', title: task manager for IT}
+name: computer science IA
+package_name: computer_science_IA
 renamed: true
 runtime_options:
   client_version: '3'
   server_spec: {base: python310-minimal}
   server_version: python3-sandbox
   version: 2
-services: []
+services:
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/tables.yml
+- client_config: {allow_signup: false, confirm_email: true, enable_automatically: true, use_email: true}
+  server_config: {user_table: users}
+  source: /runtime/services/anvil/users.yml
 startup_form: Form1
