Created AdminDashboard, AdminDashboard.RowTemplate1, AdminDashboard.RowTemplate2, TeacherDashboard and 1 more; Edited settings and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,7 +4,12 @@ unique_ids:
     standard-page.html: NZ25OKEGDHDVNNDH7K5HOXYKSKFRR4D5
     theme.css: PRZPFHT25VXHOJWIJLNEG7Q4GB3BUVMU
   forms:
+    AdminDashboard: '1759201752227783031333701.3214'
+    AdminDashboard.RowTemplate1: '1759201803416373193073222.18164'
+    AdminDashboard.RowTemplate2: '1759201811370792640853997.7532'
     Form1: OEXKDJV23W4VBP4EZICJ47R3NVOKAWZ7
+    TeacherDashboard: '1759203447419788954607167.8225'
+    report_issue_form: '1759200817997361455843773.5936'
   modules: {}
   scripts: {}
   server_modules: {}
