--- a/anvil.yaml
+++ b/anvil.yaml
@@ -97,6 +97,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: confirmed_email
       type: bool
+    - admin_ui: {order: 8, width: 200}
+      name: signed_up
+      type: datetime
     server: full
     title: users
 dependencies: []
@@ -113,7 +116,7 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/tables.yml
-- client_config: {allow_signup: false, confirm_email: true, enable_automatically: true, use_email: true}
+- client_config: {allow_signup: true, confirm_email: true, enable_automatically: true, use_email: true}
   server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
 startup_form: Form1
