Created LoginForm, ReportIssueForm, ServerAuth, SignupForm and 1 more; Edited AdminDashboard, AdminDashboard.RowTemplate1, AdminDashboard.RowTemplate2, TeacherDashboard and 1 more; Deleted Form1 and report_issue_form

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,9 +7,12 @@ unique_ids:
     AdminDashboard: '1759201752227783031333701.3214'
     AdminDashboard.RowTemplate1: '1759201803416373193073222.18164'
     AdminDashboard.RowTemplate2: '1759201811370792640853997.7532'
-    Form1: OEXKDJV23W4VBP4EZICJ47R3NVOKAWZ7
+    LoginForm: '1763357122203721808031244.6854'
+    ReportIssueForm: '1759200817997361455843773.5936'
+    SignupForm: '1763357606003665292437785.6571'
+    StartupForm: OEXKDJV23W4VBP4EZICJ47R3NVOKAWZ7
     TeacherDashboard: '1759203447419788954607167.8225'
-    report_issue_form: '1759200817997361455843773.5936'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerAuth: '1763357834475735714191291.9481'
