Edited settings, LoginForm and SignupForm

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -74,7 +74,7 @@ db_schema:
     server: full
     title: school
   users:
-    client: none
+    client: full
     columns:
     - admin_ui: {width: 200}
       name: email
@@ -95,6 +95,18 @@ db_schema:
       name: school_code
       target: school
       type: link_multiple
+    - admin_ui: {order: 6, width: 200}
+      name: last_login
+      type: datetime
+    - admin_ui: {order: 7, width: 200}
+      name: signed_up
+      type: datetime
+    - admin_ui: {order: 8, width: 200}
+      name: password_hash
+      type: string
+    - admin_ui: {order: 9, width: 200}
+      name: n_password_failures
+      type: number
     server: full
     title: users
 dependencies: []
@@ -111,7 +123,7 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/tables.yml
-- client_config: {allow_signup: false, confirm_email: false, enable_automatically: false, use_email: false}
+- client_config: {allow_signup: true, confirm_email: false, enable_automatically: true, require_secure_passwords: true, use_email: true}
   server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
 startup: {module: StartupForm, type: form}
