--- a/client_code/LoginForm/form_template.yaml
+++ b/client_code/LoginForm/form_template.yaml
@@ -13,7 +13,8 @@ components:
     name: login_btn
     properties: {text: log in}
     type: Button
-  - layout_properties: {grid_position: 'XJSXJJ,CITYQL'}
+  - event_bindings: {click: signup_link_click}
+    layout_properties: {grid_position: 'XJSXJJ,CITYQL'}
     name: signup_link
     properties: {align: center, text: sign up}
     type: Link
