--- a/client_code/SignupForm/form_template.yaml
+++ b/client_code/SignupForm/form_template.yaml
@@ -1,22 +1,40 @@
 components:
 - components:
+  - layout_properties: {grid_position: 'ZAVILB,SCBIXT'}
+    name: name_label
+    properties: {text: 'Name:'}
+    type: Label
   - layout_properties: {grid_position: 'ZAVILB,RLMDII'}
     name: name_box
     properties: {}
     type: TextBox
-  - layout_properties: {grid_position: 'MHYPOI,BKUTEX'}
+  - layout_properties: {grid_position: 'MHYPOI,RQTSFB'}
+    name: email_label
+    properties: {text: 'Email:'}
+    type: Label
+  - event_bindings: {pressed_enter: email_box_pressed_enter}
+    layout_properties: {grid_position: 'MHYPOI,BKUTEX'}
     name: email_box
     properties: {}
     type: TextBox
+  - layout_properties: {grid_position: 'REKMGZ,VGHBMW'}
+    name: password_label
+    properties: {text: 'Password:'}
+    type: Label
   - layout_properties: {grid_position: 'REKMGZ,COGPNZ'}
     name: password_box
     properties: {hide_text: false, visible: true}
     type: TextBox
+  - layout_properties: {grid_position: 'BSHIDB,VSLJUV'}
+    name: school_code_label
+    properties: {text: 'School code:'}
+    type: Label
   - layout_properties: {grid_position: 'BSHIDB,UUKOCJ'}
     name: school_code_box
     properties: {}
     type: TextBox
-  - layout_properties: {grid_position: 'OYMJPV,SKEQAC'}
+  - event_bindings: {click: signup_btn_click}
+    layout_properties: {grid_position: 'OYMJPV,SKEQAC'}
     name: signup_btn
     properties: {text: Sign Up}
     type: Button
