--- a/client_code/LoginForm/form_template.yaml
+++ b/client_code/LoginForm/form_template.yaml
@@ -1,9 +1,17 @@
 components:
 - components:
+  - layout_properties: {grid_position: 'VLRURG,ZUOQIB'}
+    name: email_label
+    properties: {text: 'Email:'}
+    type: Label
   - layout_properties: {grid_position: 'VLRURG,KGTANO'}
     name: email_box
     properties: {text: ''}
     type: TextBox
+  - layout_properties: {grid_position: 'JJVYMN,RYHUJB'}
+    name: password_label
+    properties: {text: 'Password:'}
+    type: Label
   - event_bindings: {hide: password_box_hide}
     layout_properties: {grid_position: 'JJVYMN,REEOIH'}
     name: password_box
