Edited ServerAuth, settings, LoginForm and SignupForm

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -17,11 +17,11 @@ db_schema:
       type: string
     - admin_ui: {width: 200}
       name: assigned_to
-      target: users
+      target: user_profiles
       type: link_single
     - admin_ui: {width: 200}
       name: created_by
-      target: users
+      target: user_profiles
       type: link_single
     - admin_ui: {width: 200}
       name: created_at
@@ -33,7 +33,7 @@ db_schema:
       name: location
       target: location
       type: link_single
-    - admin_ui: {order: 9, width: 200}
+    - admin_ui: {width: 200}
       name: reporter_email
       type: string
     server: full
@@ -73,42 +73,24 @@ db_schema:
       type: string
     server: full
     title: school
-  users:
+  user_profiles:
     client: full
     columns:
     - admin_ui: {width: 200}
-      name: email
-      type: string
-    - admin_ui: {order: 1, width: 200}
-      name: password
-      type: string
-    - admin_ui: {order: -1, width: 200}
       name: name
       type: string
     - admin_ui: {width: 200}
       name: role
       type: string
-    - admin_ui: {order: 6, width: 200}
-      name: enabled
-      type: bool
-    - admin_ui: {order: 5, width: 200}
-      name: school_code
-      target: school
-      type: link_multiple
-    - admin_ui: {order: 6, width: 200}
-      name: last_login
-      type: datetime
-    - admin_ui: {order: 7, width: 200}
-      name: signed_up
-      type: datetime
-    - admin_ui: {order: 8, width: 200}
-      name: password_hash
+    - admin_ui: {width: 200}
+      name: status
       type: string
-    - admin_ui: {order: 9, width: 200}
-      name: n_password_failures
-      type: number
+    - admin_ui: {width: 200}
+      name: anvil_user
+      target: user_profiles
+      type: link_single
     server: full
-    title: users
+    title: user_profiles
 dependencies: []
 metadata: {logo_img: 'asset:9b289a8980debf9a7951a2b94cc42673.jpg', title: task manager for IT}
 name: computer science IA
@@ -126,5 +108,8 @@ services:
 - client_config: {allow_signup: true, confirm_email: false, enable_automatically: true, require_secure_passwords: true, use_email: true}
   server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
+- client_config: {}
+  server_config: {custom_smtp: false, test_mode: true}
+  source: /runtime/services/anvil/email.yml
 startup: {module: StartupForm, type: form}
 startup_form: null
