--- a/client_code/SignupForm/form_template.yaml
+++ b/client_code/SignupForm/form_template.yaml
@@ -26,13 +26,14 @@ components:
     properties: {hide_text: false, visible: true}
     type: TextBox
   - layout_properties: {grid_position: 'BSHIDB,VSLJUV'}
-    name: school_code_label
-    properties: {text: 'School code:'}
+    name: role_label
+    properties: {text: 'Role:'}
     type: Label
-  - layout_properties: {grid_position: 'BSHIDB,UUKOCJ'}
-    name: school_code_box
+  - event_bindings: {change: role_dropdown_change}
+    layout_properties: {grid_position: 'BSHIDB,TLXVFM'}
+    name: role_dropdown
     properties: {}
-    type: TextBox
+    type: DropDown
   - event_bindings: {click: signup_btn_click}
     layout_properties: {grid_position: 'OYMJPV,SKEQAC'}
     name: signup_btn
