Created AdminApprovalForm, AdminApprovalForm.ItemTemplate1, AdminApprovalForm.ItemTemplate2, AdminApprovalForm.ItemTemplate3 and 3 more; Edited AdminDashboard, LoginForm, ReportIssueForm, ServerAuth and 4 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,6 +4,11 @@ unique_ids:
     standard-page.html: NZ25OKEGDHDVNNDH7K5HOXYKSKFRR4D5
     theme.css: PRZPFHT25VXHOJWIJLNEG7Q4GB3BUVMU
   forms:
+    AdminApprovalForm: '1763622092197575192929242.9825'
+    AdminApprovalForm.ItemTemplate1: '1763622236007533405611592.4629'
+    AdminApprovalForm.ItemTemplate2: '176362247037240790709537.9787'
+    AdminApprovalForm.ItemTemplate3: '1763622568552330007751240.995'
+    AdminApprovalForm.RowTemplate5: '1763622755385831821131725.1301'
     AdminDashboard: '1759201752227783031333701.3214'
     AdminDashboard.RowTemplate1: '1759201803416373193073222.18164'
     AdminDashboard.RowTemplate2: '1759201811370792640853997.7532'
@@ -12,6 +17,8 @@ unique_ids:
     SignupForm: '1763357606003665292437785.6571'
     StartupForm: OEXKDJV23W4VBP4EZICJ47R3NVOKAWZ7
     TeacherDashboard: '1759203447419788954607167.8225'
+    TeacherDashboard.RowTemplate3: '1763620785302686221874743.0267'
+    TeacherDashboard.RowTemplate4: '1763620971421930990139574.0745'
   modules: {}
   scripts: {}
   server_modules:
