--- a/anvil.yaml
+++ b/anvil.yaml
@@ -36,6 +36,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: reporter_email
       type: string
+    - admin_ui: {order: 10, width: 200}
+      name: last_updated
+      type: datetime
     server: full
     title: issues
   location:
