--- a/anvil.yaml
+++ b/anvil.yaml
@@ -36,7 +36,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: reporter_email
       type: string
-    - admin_ui: {order: 10, width: 200}
+    - admin_ui: {width: 200}
       name: last_updated
       type: datetime
     server: full
@@ -76,6 +76,17 @@ db_schema:
       type: string
     server: full
     title: school
+  sessions:
+    client: none
+    columns:
+    - admin_ui: {width: 200}
+      name: email
+      type: string
+    - admin_ui: {width: 200}
+      name: timestamp
+      type: datetime
+    server: full
+    title: sessions
   users:
     client: none
     columns:
@@ -108,6 +119,9 @@ db_schema:
       type: string
     - admin_ui: {width: 200}
       name: status
+      type: string
+    - admin_ui: {width: 200}
+      name: email_confirmation_key
       type: string
     server: full
     title: Users
