--- a/client_code/AdminDashboard/form_template.yaml
+++ b/client_code/AdminDashboard/form_template.yaml
@@ -1,5 +1,6 @@
 components:
-- layout_properties: {grid_position: 'XRUYYF,GCIVUA'}
+- event_bindings: {click: logout_btn_click}
+  layout_properties: {grid_position: 'XRUYYF,GCIVUA'}
   name: logout_btn
   properties: {text: Logout}
   type: Button
