--- a/client_code/ReportIssueForm/form_template.yaml
+++ b/client_code/ReportIssueForm/form_template.yaml
@@ -1,7 +1,7 @@
 components:
 - layout_properties: {grid_position: 'RFGETG,YQFGOV'}
   name: title_label
-  properties: {text: 'Title:'}
+  properties: {text: 'Issue:'}
   type: Label
 - layout_properties: {grid_position: 'RFGETG,VHMOAB'}
   name: title_box
