--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,7 +1,7 @@
 allow_embedding: false
 db_schema:
   issues:
-    client: full
+    client: search
     columns:
     - admin_ui: {width: 200}
       name: title
