--- a/client_code/TeacherDashboard/RowTemplate3/form_template.yaml
+++ b/client_code/TeacherDashboard/RowTemplate3/form_template.yaml
@@ -1,3 +1,19 @@
-components: []
+components:
+- layout_properties: {column: HTBRLL}
+  name: title_label
+  properties: {}
+  type: Label
+- layout_properties: {column: UUKQMD}
+  name: urgency_label
+  properties: {}
+  type: Label
+- layout_properties: {column: ASESZT}
+  name: status_label
+  properties: {}
+  type: Label
+- layout_properties: {column: QMIJTC}
+  name: location_label
+  properties: {}
+  type: Label
 container: {type: DataRowPanel}
 is_package: true
