--- a/client_code/TeacherDashboard/form_template.yaml
+++ b/client_code/TeacherDashboard/form_template.yaml
@@ -28,7 +28,8 @@ components:
   properties: {text: Refresh}
   type: Button
 - components:
-  - name: repeating_panel_1
+  - layout_properties: {}
+    name: repeating_panel_1
     properties: {item_template: TeacherDashboard.RowTemplate3}
     type: RepeatingPanel
   layout_properties: {grid_position: 'SWIPIA,LRKWYA'}
